...
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:textColor="#ffff"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/chatField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:hint="@string/your_message"
                android:textColorHint="@color/colorWhite"/>

            <Button
                android:id="@+id/sendMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"/>

        </LinearLayout>

...
