<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/session_chat_menu"
        android:icon="@drawable/ic_chat"
        android:title=""
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_settings"
        android:title="">
        <menu>
            <item
                android:id="@+id/user_profile"
                app:showAsAction="always"
                android:title="@string/user_profile" />
            <item
                android:id="@+id/logout"
                app:showAsAction="always"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>