<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_session"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.univ_tln.trailscommunity.features.sessions.CreateSessionActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/departurePlaceField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_departure_place"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/arrivalPlaceField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_arrival_place"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/typeActivitySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/activities"/>

    <EditText
        android:id="@+id/startDateField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_date"
        android:inputType="datetime"
        android:maxLines="1" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/createSessionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/root_create_session_button"/>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>
